fixing container overflow

--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,7 @@
 .blog-container {
   margin: auto;
   padding: 20px 30px;
-  width: 100%;
+  /* width: 100%; */
   max-width: 35rem;
   border-radius: 10px;
   border: 2px var(--primary);
@@ -210,8 +210,8 @@
   background: var(--light);
   color: var(--dark-alt);
   height: 50px;
-  position: sticky;
-  bottom: 0;
+  /* position: sticky; */
+  /* bottom: 0; */
 }
 
 .footer {
@@ -234,7 +234,7 @@
 /* media query */
 
 /* @media (min-width: 200px) and (max-width: 480px) {
-  .nav-bar {
-
+  .blog-container {
+    max-width: 20rem;
   }
 } */
